welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: ';' expected but ')' found.
	if(((a - b) % 10 == 0 && (b - c) % 10 == 0 ) | (a - c) % 10 == 0 && (b - c) % 10 == 0 ) | (a - c) % 10 == 0 && (b - a) % 10 == 0 )){
                                                                                                                                         ^