welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
	if(((a - b) % 10 == 0 && (b - c) % 10 == 0 ) | (a - c) % 10 == 0 && (b - c) % 10 == 0 ) | (a - c) % 10 == 0 && (b - a) % 10 == 0 )){
		return true;
	}
	else{
		return false;
	}
}
